GWT SwtBot tests, abstract test case class addition.